fixed overflow

--- a/src/components/works/Works.css
+++ b/src/components/works/Works.css
@@ -1,3 +1,6 @@
+.project{
+    overflow-x: hidden;
+}
 .works h1{
     text-align: center;
 }
